# shipkit

./: .gitignore  CHANGELOG.md  LICENSE  MARKETPLACE-COMPATIBILITY.md  MIGRATION-0.2.0.md  PHASE-5-PLAN.md  PROJECT-STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  version-bump.yml
docs/: mcp-servers.md
examples/: pattern-learner-demo.md  pre-commit-safety-demo.md
seed/: gitignore.sample  mcp.sample.json
shipkit/: __init__.py  cli.py  config.py  datadir.py  install.py  lint.py  plugin.py  project.py  skill_parser.py  sync.py
shipkit/compilers/: __init__.py  agents.py  base.py  claude.py  discovery_template.py  gemini.py  guideline_discovery_template.py  kiro.py  opencode.py
shipkit/content/guidelines/: agent-behavior.md  dev-principles.md  extensibility.md  sustainability.md
shipkit/content/hooks/: context-inject.yaml  context_inject.py  retro-analyze.yaml  retro-auto.yaml  retro_analyze.py  retro_auto.py  session-save.yaml  session_save.py  update-check.yaml
shipkit/content/steering/: agent-behavior.md  extensibility.md  skill-loading-rules.md  subagent-catalog.md
shipkit/content/subagents/: retro-analyzer.yaml  retro-auto.yaml
shipkit/core/: mcp.json
shipkit/core/agents/: installer.md
shipkit/core/guidelines/: agent-behavior.md  (+5 more)
tests/: conftest.py  test_agents.py  test_cli.py  test_compilers.py  test_config.py  test_datadir.py  test_e2e.py  test_hooks.py  test_init_alias.py  test_lint.py  test_migrate.py  test_pattern_learner.py  test_plugin.py  test_pre_commit_safety.py  test_project.py  test_run.py  test_sync.py
(+69 files in other folders)
