[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipkit"
version = "0.1.8"
description = "Production-grade Claude Code setup with battle-tested skills and self-learning capabilities. Stop configuring, start shipping."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.scripts]
shipkit = "shipkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shipkit"]
